<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth Music</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_text_min">              -- : --</string>
    <string name="play_text_max">-- : --</string>
    <string name="music_source_title">Audio source selection</string>
    <string name="music_source_am">AM</string>
    <string name="music_source_fm">FM</string>
    <string name="music_source_radio">Radio</string>
    <string name="music_source_online_music">Online Music</string>
    <string name="music_source_ipod">iPod</string>
    <string name="music_source_usb">USB Music</string>
    <string name="music_source_bluetooth">Bluetooth</string>
    <string name="device_management">Device Management</string>
    <string name="music_matedate_unsupport">Unknown</string>
    <string name="music_title_unknow">Unknown Title</string>
    <string name="music_artist_unknow">Unknown Artist</string>
    <string name="music_album_unknow">Unknown Album</string>
    <string name="music_bluetooth_disconnect">Disconnected</string>
    <string name="music_bluetooth_disconnect_summery">Please connect bluetooth.</string>
    <string name="music_bluetooth_disconnect_tip">Not connected to Bluetooth Media Audio</string>
    <string name="music_bluetooth_carlife_connect_tip">Baidu CarLife is connected \n Bluetooth music function cannot be used</string>
    <string name="tip_text_main_no_device_connected">Bluetooth Device Disconnected</string>
    <string name="tip_text_main_no_device_connected2">as the right picture:\nplease ensure your mobile bluetooth is powered on,and can be found.</string>
    <string name="tip_text_main_no_device_connected3">Mobile phones can refer to the following process:\nSettings->Bluetooth -> Open bluetooth -> Allow new connections</string>

    <!-- bluetooth settings -->
    <string name="visible_devices">Available Devices</string>
    <string name="pair_devices">Paired Devices</string>
    <string name="search_finish">Search finished</string>
    <string name="pair_fail">Pair fail</string>
    <string name="pair_success">Pair success</string>
    <string name="bluetooth_connect">Bluetooth connect</string>
    <string name="bluetooth_disconnect">break</string>
    <string name="bluetooth_status_connected">Connected</string>
    <string name="bluetooth_status_connecting">Connecting...</string>
    <string name="bluetooth_status_disconnecting">Disconnecting...</string>
    <string name="bluetooth_status_pairing">Pairing...</string>
    <string name="bluetooth_enable_text">Please turn on bluetooth</string>
    <string name="bluetooth_enable_carplay_text">Apple Carplay is connected, The bluetooth function cannot be used</string>
    <string name="music_switch_split">/</string>
    <string name="bluetooth_power_not_open">Bluetooth is OFF</string>
    <string name="no_support_bluetooth_music">Your connected device does not support Bluetooth Audio.</string>

</resources>