<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg_bluetoothsettings"
    android:orientation="horizontal">
    
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="@string/music_source_title"
            />
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/division_horizontal"/>
    
    <LinearLayout 
        android:id="@+id/lin_music_am"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/text_switch_am"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="@string/music_source_am"
            android:drawableLeft="@drawable/icon_music_source_am_fm"
            />
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/division_horizontal"/>
    
    <LinearLayout 
        android:id="@+id/lin_music_fm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/text_switch_fm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="@string/music_source_fm"
            android:drawableLeft="@drawable/icon_music_source_am_fm"
            />
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/division_horizontal"/>
    
    <LinearLayout 
        android:id="@+id/lin_music_ipod"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/text_switch_ipod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="@string/music_source_ipod"
            android:drawableLeft="@drawable/icon_music_source_ipod"
            />
        
        <TextView 
            android:id="@+id/text_switch_spite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="/"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            />
        
        <TextView 
            android:id="@+id/text_switch_usb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="@string/music_source_usb"
            android:drawableLeft="@drawable/icon_music_source_usb"
            />
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/division_horizontal"/>
    
    <LinearLayout 
        android:id="@+id/lin_music_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/text_switch_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/music_switch_text_margin_left"
            android:textSize="@dimen/music_switch_text_size"
            android:gravity="center_vertical"
            android:text="@string/music_source_bluetooth"
            android:drawableLeft="@drawable/icon_music_source_bluetooth"
            />
        
    </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="@dimen/music_switch_pandding_right"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_close_sliding"
            />
        
    </LinearLayout>
    

</LinearLayout>