<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/default_screenbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/right_bg" />

    <FrameLayout
        android:layout_width="191dp"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:visibility="gone" >

        <View
            android:layout_width="1dp"
            android:layout_height="370dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/line" />

        <ImageButton
            android:id="@+id/source_online_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="126dp"
            android:background="@drawable/selector_icon_radio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="195dp"
            android:text="@string/music_source_online_music"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="245dp"
            android:src="@drawable/line2" />

        <ImageButton
            android:id="@+id/source_usb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/selector_icon_usb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="320dp"
            android:text="@string/music_source_usb"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="370dp"
            android:src="@drawable/line2" />

        <ImageButton
            android:id="@+id/source_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="374dp"
            android:background="@drawable/selector_icon_btmusic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="448dp"
            android:text="@string/music_source_bluetooth"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="121dp"
            android:src="@drawable/line2"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/device_management_layout"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="390dp"
        android:focusable="false" >

        <ImageView
            android:id="@+id/device_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/selector_devicesetting" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/device_management"
            android:textColor="#e0f6ff"
            android:textSize="22px" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_musicinfo"
        android:layout_width="820dp"
        android:layout_height="420dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/music_title"
            style="@style/timeText"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="43dp"
            android:marqueeRepeatLimit="-1"
            android:singleLine="true"
            android:text="@string/music_title_unknow"
            android:textColor="@color/white"
            android:textSize="29sp" />

        <FrameLayout
            android:id="@+id/music_artist_album"
            android:layout_width="470dp"
            android:layout_height="30dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="80dp" >

            <TextView
                android:id="@+id/music_artist"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="27dp"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/music_artist_unknow"
                android:textColor="@color/album_text_gray"
                android:textSize="22sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/text_gray" />

            <TextView
                android:id="@+id/music_album"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="243dp"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/music_album_unknow"
                android:textColor="@color/album_text_gray"
                android:textSize="22sp" />
        </FrameLayout>

        <ImageView
            android:id="@+id/music_defaultcover"
            android:layout_width="606dp"
            android:layout_height="606dp"
            android:layout_gravity="top|right"
            android:layout_marginRight="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rotate"
            android:visibility="gone" />

        <ImageView
            android:layout_width="360dp"
            android:layout_height="270dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="120dp"
            android:src="@drawable/album" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:visibility="visible" >

        <FrameLayout
            android:id="@+id/frame_seekbar"
            android:layout_width="1050dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="278dp"
            android:visibility="gone" >

            <com.hsae.d531mc.bluetooth.music.util.MySeekBar
                android:id="@+id/music_seekbar"
                style="@style/MusicSeekBar"
                android:layout_width="815dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/music_currenttime"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/play_text_min"
                android:textColor="@color/white_trans"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/music_totaltime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/play_text_max"
                android:textColor="@color/white_trans"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/seekbar_tail"
                android:layout_width="185dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:src="@drawable/seekbar_tail"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/layout_playbtn"
            android:layout_width="800dp"
            android:layout_height="115px"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="340dp" >

            <!-- android:background="@drawable/bg_bottom_bar" -->

            <ImageView
                android:layout_width="1dp"
                android:layout_height="105dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/icon_vertical_split"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_prev"
                android:layout_width="123dp"
                android:layout_height="110dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="280dp"
                android:background="@color/transparent"
                android:paddingLeft="45dp"
                android:paddingRight="25dp"
                android:src="@drawable/selector_previous" />

            <ImageView
                android:id="@+id/btn_play"
                android:layout_width="115px"
                android:layout_height="match_parent"
                android:layout_gravity="top|left"
                android:layout_marginLeft="465dp"
                android:background="@drawable/selector_stop"
                android:paddingLeft="50dp" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="123dp"
                android:layout_height="110dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="631dp"
                android:background="@color/transparent"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:src="@drawable/selector_next" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="105dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="938dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/icon_vertical_split"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_repeat"
                android:layout_width="136dp"
                android:layout_height="81dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="18dp"
                android:paddingBottom="11dp"
                android:paddingLeft="50dp"
                android:paddingRight="37dp"
                android:paddingTop="19dp"
                android:src="@drawable/selector_single"
                android:visibility="gone" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="105dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="1108dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/icon_vertical_split"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_shuffle"
                android:layout_width="135dp"
                android:layout_height="80dp"
                android:layout_gravity="top|left"
                android:layout_marginLeft="1000dp"
                android:layout_marginTop="18dp"
                android:paddingBottom="11dp"
                android:paddingLeft="33dp"
                android:paddingRight="35dp"
                android:paddingTop="17dp"
                android:src="@drawable/selector_allrandom"
                android:visibility="gone" />
        </FrameLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/btn_home"
        android:layout_width="126dp"
        android:layout_height="87dp"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="19dp"
        android:paddingBottom="15dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="15dp"
        android:src="@drawable/btn_home"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_disconnect_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white_trans"
        android:textSize="45sp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/main_connectTip"
        android:layout_width="1000dp"
        android:layout_height="700dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="232dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_no_connect_tip"
                android:layout_width="460dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tip_text_main_no_device_connected"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_38" />

            <TextView
                android:id="@+id/text_no_connect_tip2"
                android:layout_width="450dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/tip_text_main_no_device_connected2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30" />

            <TextView
                android:id="@+id/text_no_connect_tip3"
                android:layout_width="470dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/tip_text_main_no_device_connected3"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="23dp"
            android:src="@drawable/ic_noconnect" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/bt_power_unuse"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_gravity="center" >

        <FrameLayout
            android:paddingRight="120dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/bt_power_unuse_image"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="290px"
                android:src="@drawable/un_connect_image" />

            <TextView
                android:id="@+id/bt_power_unuse_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="375px"
                android:gravity="center"
                android:textColor="#FFFFFFFF"
                android:textSize="28sp" />
        </FrameLayout>
    </FrameLayout>

</FrameLayout>